2010-02-07  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13400: Selector for Subtemplates doesn't respect pageTS settings

2010-02-02  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13392: "Update Mapping" isn't clear for new users

2010-02-01  Steffen Kamper  <info@sk-typo3.de>

	* Changed label "Mapping is up to date."
	* Fixed bug: #13387: Object and Param tag cannot be mapped

2010-02-01  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13382: ext_autoload.php missing 
	* Fixed bug: #8375: Tables entered via RTE break backend layout

2010-01-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13150: Allow edit of oldStyleColumnNumber in mapping module
	
2010-01-27  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #13235: Pre- & Postprocessing Hook for handleIncomingCommands
	* Fixed bug: #13261: extension load order might prevent wizardItems from extensions

2010-01-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13328: Don't link to file_edit.php if staticDS comes from extension
	* Fixed bug: #13256: Installing Mininews breaks database driven DS/TO handling
	
2010-01-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13286: mod2 is not localized
	
2010-01-19  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13278: "New" and "Browse" buttons don't seem to work properly after Drag&Drop
	* Fixed bug: #13276: makeLocalRecord pointer isn't updated during drag&drop
	* Fixed bug: #13275: sortable_updatePasteButtons not needed anymore
	* Fixed bug: #11520: DS Tag for Hiding Field Preview Data (part 2)
	* Fixed bug: #13154: Deleting the last element from a section in an FCE crashes rendering
	* Fixed bug: #3843: Unmapping does not hide ce field in page module
	
2010-01-18  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bugfix #13180: Sanitize returnUrl
	* Corrected typo in extConf language file
	
2010-01-17  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #13274: delete icon carries wrong css-class